# gvd_server/docs/swagger.json
@@ -209,6 +209,44 @@
                 }
             }
         },
+        "/api/roles": {
+            "post": {
+                "description": "创建角色",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "角色管理"
+                ],
+                "summary": "创建角色",
+                "parameters": [
+                    {
+                        "description": "参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/role_api.RoleCreateRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/site": {
             "get": {
                 "description": "站点配置查询",
@@ -659,6 +697,25 @@
                 "data": {},
                 "msg": {
                     "type": "string"
+                }
+            }
+        },
+        "role_api.RoleCreateRequest": {
+            "type": "object",
+            "required": [
+                "title"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "pwd": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 16,
+                    "minLength": 2
                 }
             }
         },
